# tfb-reflex-repro

./: stack.yaml  tfb.cabal
src/: Main.hs
src/Reflex/Dom/Contrib/: Audio.hs
src/Reflex/Dom/Contrib/Widgets/: Shapes.hs
src/TFB/: Colors.hs  Songs.hs  Types.hs
