name:                tfb
version:             0.1.0.0
synopsis:            Two Finger Boogie
description:         Please see README.md
-- homepage:            http://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Gergő Érdi
maintainer:          gergo@erdi.hu
copyright:           2016 Gergő Érdi, Viktoria Kiss
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable tfb
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , reflex
                     , reflex-dom
                     , time
                     , mtl
                     , reflex-dom-contrib
                     , containers
                     , ref-tf
                     , ghcjs-dom
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hello
